# XrChat

./: .prettierrc.js  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
proto/: message.proto  option.proto  relation.proto  relation.ts  user.proto  user.ts
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: relation.rs
src-tauri/src/connect/: mod.rs  tests.rs
src-tauri/src/interaction/: mod.rs
src-tauri/src/model/: mod.rs
src-tauri/src/pb/: mod.rs  relation.rs  tests.rs
src-tauri/src/repository/: mod.rs
src/api/: index.ts  req.ts
src/components/: Aside.vue  Info.vue  Notice.vue  Search.vue  Switch.vue
src/handler/: handler.ts  index.ts
src/pb/: message.ts  option.ts  relation.ts  user.ts
src/routes/: index.ts
src/store/: index.ts  relation.ts  session.ts  user.ts
src/type/: index.ts
src/utils/: index.ts
src/views/Add/: index.vue
src/views/Login/: index.vue
src/views/Register/: index.vue
src/views/Relation/: index.vue
src/views/Self/: index.vue
src/views/Session/: index.vue
