[package]
name = "xrchat"
version = "0.0.0"
description = "A Tauri App"
authors = ["xianren711@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }
prost-build = { version = "0.12"}#,features = [“cleanup-markdown”]

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version="0.31.0", features = ["bundled"] }
protobuf = "3.4.0"
reqwest = "0.12.4"
protobuf-codegen-pure = "2.28.0"
prost = "0.12.4"
prost-types = "0.12.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
